--- a/series.conf
+++ b/series.conf
@@ -8692,6 +8692,7 @@
 	patches.suse/iavf-Refactor-text-of-informational-message.patch
 	patches.suse/iavf-Refactor-string-format-to-avoid-static-analysis.patch
 	patches.suse/iavf-Fix-displaying-queue-statistics-shown-by-ethtoo.patch
+	patches.suse/mlxsw-item-Add-support-for-local_port-field-in-a-spl.patch
 	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
