--- a/series.conf
+++ b/series.conf
@@ -6484,6 +6484,7 @@
 	patches.suse/vfio-ccw-Remove-unneeded-GFP_DMA
 	patches.suse/vdpa-fix-typo.patch
 	patches.suse/vp_vdpa-add-vq-irq-offloading-support.patch
+	patches.suse/vdpa-add-new-callback-get_vq_num_min-in-vdpa_config_.patch
 	patches.suse/virtio_ring-check-desc-NULL-when-using-indirect-with.patch
 	patches.suse/MAINTAINERS-add-an-entry-for-NXP-S32G-boards.patch
 	patches.suse/ARM-s3c-irq-s3c24xx-Fix-return-value-check-for-s3c24.patch
