--- a/series.conf
+++ b/series.conf
@@ -11719,6 +11719,7 @@
 	patches.suse/xfrm-delete-duplicated-functions-that-calls-same-xfr.patch
 	patches.suse/net-mlx5e-Prepare-non-linear-legacy-RQ-for-XDP-multi.patch
 	patches.suse/net-mlx5e-Use-fragments-of-the-same-size-in-non-line.patch
+	patches.suse/net-mlx5e-Use-page-sized-fragments-with-XDP-multi-bu.patch
 	patches.suse/qed-remove-unnecessary-memset-in-qed_init_fw_funcs.patch
 	patches.suse/bnxt-use-the-devlink-instance-lock-to-protect-sriov.patch
 	patches.suse/devlink-add-explicitly-locked-flavor-of-the-rate-nod.patch
