--- a/series.conf
+++ b/series.conf
@@ -11485,6 +11485,7 @@
 	patches.suse/nfp-add-support-to-offload-tc-action-to-hardware.patch
 	patches.suse/nfp-add-hash-table-to-store-meter-table.patch
 	patches.suse/nfp-add-process-to-get-action-stats-from-hardware.patch
+	patches.suse/nfp-add-support-to-offload-police-action-from-flower.patch
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
