--- a/series.conf
+++ b/series.conf
@@ -5226,6 +5226,7 @@
 	patches.suse/mlxsw-spectrum-Use-PLLP-to-get-front-panel-number-an.patch
 	patches.suse/mlxsw-reg-Add-Port-Module-To-local-DataBase-Register.patch
 	patches.suse/mlxsw-spectrum-Use-PMTDB-register-to-obtain-split-in.patch
+	patches.suse/mlxsw-reg-Remove-PMTM-register.patch
 	patches.suse/net-smc-add-support-for-user-defined-EIDs
 	patches.suse/net-smc-keep-static-copy-of-system-EID
 	patches.suse/net-smc-add-generic-netlink-support-for-system-EID
