--- a/series.conf
+++ b/series.conf
@@ -9765,6 +9765,7 @@
 	patches.suse/vdpa-mlx5-Distribute-RX-virtqueues-in-RQT-object.patch
 	patches.suse/vdpa-Sync-calls-set-get-config-status-with-cf_mutex.patch
 	patches.suse/vdpa-Read-device-configuration-only-if-FEATURES_OK.patch
+	patches.suse/vdpa-Allow-to-configure-max-data-virtqueues.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
