--- a/series.conf
+++ b/series.conf
@@ -9004,6 +9004,7 @@
 	patches.suse/net-mlx5-DR-Support-matching-on-tunnel-headers-0-and.patch
 	patches.suse/net-mlx5-DR-Add-support-for-matching-on-geneve_tlv_o.patch
 	patches.suse/net-mlx5-DR-Improve-steering-for-empty-or-RX-TX-only.patch
+	patches.suse/net-mlx5-DR-Ignore-modify-TTL-if-device-doesn-t-supp.patch
 	patches.suse/bpf-Do-not-WARN-in-bpf_warn_invalid_xdp_action.patch
 	patches.suse/bpf-Let-bpf_warn_invalid_xdp_action-report-more-info.patch
 	patches.suse/bpf-Introduce-composable-reg-ret-and-arg-types.patch
