--- a/series.conf
+++ b/series.conf
@@ -3376,6 +3376,7 @@
 	patches.suse/vhost-iotlb-Add-an-opaque-pointer-for-vhost-IOTLB.patch
 	patches.suse/vdpa-Add-an-opaque-pointer-for-vdpa_config_ops.dma_m.patch
 	patches.suse/vdpa-factor-out-vhost_vdpa_pa_map-and-vhost_vdpa_pa_.patch
+	patches.suse/vdpa-Support-transferring-virtual-addressing-during-.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
 	patches.suse/cifs-rename-cifs_common-to-smbfs_common.patch
 	patches.suse/cifs-move-SMB-FSCTL-definitions-to-common-code.patch
