--- a/series.conf
+++ b/series.conf
@@ -11399,6 +11399,7 @@
 	patches.suse/i40e-Add-sending-commands-in-atomic-context.patch
 	patches.suse/i40e-Add-new-versions-of-send-ASQ-command-functions.patch
 	patches.suse/i40e-Add-new-version-of-i40e_aq_add_macvlan-function.patch
+	patches.suse/i40e-Fix-race-condition-while-adding-deleting-MAC-VL.patch
 	patches.suse/msft-hv-2523-net-mana-Add-handling-of-CQE_RX_TRUNCATED.patch
 	patches.suse/msft-hv-2524-net-mana-Remove-unnecessary-check-of-cqe_type-in-man.patch
 	patches.suse/bnx2x-Replace-one-element-array-with-flexible-array-.patch
