--- a/series.conf
+++ b/series.conf
@@ -11458,6 +11458,7 @@
 	patches.suse/net-mlx5e-Optimize-mlx5e_select_queue.patch
 	patches.suse/net-mlx5e-Optimize-modulo-in-mlx5e_select_queue.patch
 	patches.suse/net-mlx5e-Optimize-the-common-case-condition-in-mlx5.patch
+	patches.suse/net-mlx5e-Fix-spelling-mistake-supoported-supported.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
