--- a/series.conf
+++ b/series.conf
@@ -11357,6 +11357,7 @@
 	patches.suse/igbvf-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/net-mlx5e-Move-code-chunk-setting-encap-dests-into-i.patch
 	patches.suse/net-mlx5e-Pass-attr-arg-for-attaching-detaching-enca.patch
+	patches.suse/net-mlx5e-Move-counter-creation-call-to-alloc_flow_a.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
 	patches.suse/Bluetooth-btintel-Fix-WBS-setting-for-Intel-legacy-R.patch
