--- a/series.conf
+++ b/series.conf
@@ -11457,6 +11457,7 @@
 	patches.suse/net-mlx5e-Use-READ_ONCE-WRITE_ONCE-for-DCBX-trust-st.patch
 	patches.suse/net-mlx5e-Optimize-mlx5e_select_queue.patch
 	patches.suse/net-mlx5e-Optimize-modulo-in-mlx5e_select_queue.patch
+	patches.suse/net-mlx5e-Optimize-the-common-case-condition-in-mlx5.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
