--- a/series.conf
+++ b/series.conf
@@ -6489,6 +6489,7 @@
 	patches.suse/vdpa-add-new-attribute-VDPA_ATTR_DEV_MIN_VQ_SIZE.patch
 	patches.suse/vdpa-mlx5-Remove-mtu-field-from-vdpa-net-device.patch
 	patches.suse/vdpa-mlx5-Rename-control-VQ-workqueue-to-vdpa-wq.patch
+	patches.suse/vdpa-mlx5-Propagate-link-status-from-device-to-vdpa-.patch
 	patches.suse/virtio_ring-check-desc-NULL-when-using-indirect-with.patch
 	patches.suse/MAINTAINERS-add-an-entry-for-NXP-S32G-boards.patch
 	patches.suse/ARM-s3c-irq-s3c24xx-Fix-return-value-check-for-s3c24.patch
