--- a/series.conf
+++ b/series.conf
@@ -11446,6 +11446,7 @@
 	patches.suse/net-mlx5e-Remove-unused-tstamp-SQ-field.patch
 	patches.suse/net-mlx5e-Read-max-WQEBBs-on-the-SQ-from-firmware.patch
 	patches.suse/net-mlx5e-Use-FW-limitation-for-max-MPW-WQEBBs.patch
+	patches.suse/net-mlx5e-Cleanup-of-start-stop-all-queues.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
