--- a/series.conf
+++ b/series.conf
@@ -8863,6 +8863,7 @@
 	patches.suse/iavf-Add-support-for-VIRTCHNL_VF_OFFLOAD_VLAN_V2-off.patch
 	patches.suse/iavf-Restrict-maximum-VLAN-filters-for-VIRTCHNL_VF_O.patch
 	patches.suse/flow_offload-reject-to-offload-tc-actions-in-offload.patch
+	patches.suse/flow_offload-add-index-to-flow_action_entry-structur.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
