--- a/series.conf
+++ b/series.conf
@@ -9762,6 +9762,7 @@
 	patches.suse/virtio_ring-mark-ring-unused-on-error.patch
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
 	patches.suse/vdpa-Provide-interface-to-read-driver-features.patch
+	patches.suse/vdpa-mlx5-Distribute-RX-virtqueues-in-RQT-object.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
