--- a/series.conf
+++ b/series.conf
@@ -5365,6 +5365,7 @@
 	patches.suse/ionic-have-ionic_qcq_disable-decide-on-sending-to-ha.patch
 	patches.suse/ionic-add-lif-param-to-ionic_qcq_disable.patch
 	patches.suse/net-dev-Change-napi_gro_complete-return-type-to-void.patch
+	patches.suse/net-mscc-ocelot-support-egress-VLAN-rewriting-via-VC.patch
 	patches.suse/msft-hv-2445-net-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-use-eth_hw_addr_set.patch
 	patches.suse/net-usb-use-eth_hw_addr_set.patch
