--- a/series.conf
+++ b/series.conf
@@ -11314,6 +11314,7 @@
 	patches.suse/net-mlx5-Reuse-exported-virtfn-index-function-call.patch
 	patches.suse/net-mlx5-Disable-SRIOV-before-PF-removal.patch
 	patches.suse/PCI-IOV-Add-pci_iov_get_pf_drvdata-to-allow-VF-reach.patch
+	patches.suse/net-mlx5-Expose-APIs-to-get-put-the-mlx5-core-device.patch
 	patches.suse/bpf-Fix-UAF-due-to-race-between-btf_try_get_module-a.patch
 	patches.suse/net-skbuff-add-size-metadata-to-skb_shared_info-for-.patch
 	patches.suse/xdp-introduce-flags-field-in-xdp_buff-xdp_frame.patch
