--- a/series.conf
+++ b/series.conf
@@ -11443,6 +11443,7 @@
 	patches.suse/mt76-mt7615-check-sta_rates-pointer-in-mt7615_sta_ra.patch
 	patches.suse/mt76-dma-initialize-skip_unmap-in-mt76_dma_rx_fill.patch
 	patches.suse/octeontx2-af-fix-array-bound-error.patch
+	patches.suse/net-mlx5e-Remove-unused-tstamp-SQ-field.patch
 	patches.suse/selftests-mptcp-add-csum-mib-check-for-mptcp_connect.patch
 	patches.suse/net-ibmvnic-Cleanup-workaround-doing-an-EOI-after-pa.patch
 	patches.suse/ionic-catch-transition-back-to-RUNNING-with-fw_gener.patch
