--- a/series.conf
+++ b/series.conf
@@ -9752,6 +9752,7 @@
 	patches.suse/remoteproc-qcom-pil_info-Don-t-memcpy_toio-more-than.patch
 	patches.suse/remoteproc-qcom-pas-Add-missing-power-domain-mxc-for.patch
 	patches.suse/ifcvf-vDPA-fix-misuse-virtio-net-device-config-size-.patch
+	patches.suse/docs-document-sysfs-ABI-for-vDPA-bus.patch
 	patches.suse/virtio-virtio_mem-handle-a-possible-NULL-as-a-memcpy.patch
 	patches.suse/virtio_ring-mark-ring-unused-on-error.patch
 	patches.suse/vdpa-clean-up-get_config_size-ret-value-handling.patch
