--- a/series.conf
+++ b/series.conf
@@ -11394,6 +11394,7 @@
 	patches.suse/ixgbe-respect-metadata-on-XSK-Rx-to-skb.patch
 	patches.suse/sfc-The-size-of-the-RX-recycle-ring-should-be-more-f.patch
 	patches.suse/net-dsa-mv88e6xxx-Enable-port-policy-support-on-6097.patch
+	patches.suse/i40e-Disable-hw-tc-offload-feature-on-driver-load.patch
 	patches.suse/msft-hv-2523-net-mana-Add-handling-of-CQE_RX_TRUNCATED.patch
 	patches.suse/msft-hv-2524-net-mana-Remove-unnecessary-check-of-cqe_type-in-man.patch
 	patches.suse/bnx2x-Replace-one-element-array-with-flexible-array-.patch
