--- a/series.conf
+++ b/series.conf
@@ -9058,6 +9058,7 @@
 	patches.suse/i40e-Add-ensurance-of-MacVlan-resources-for-every-tr.patch
 	patches.suse/i40e-Minimize-amount-of-busy-waiting-during-AQ-send.patch
 	patches.suse/i40e-Update-FW-API-version.patch
+	patches.suse/i40e-Remove-non-inclusive-language.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
 	patches.suse/can-mcp251xfd-add-missing-newline-to-printed-strings.patch
