--- a/series.conf
+++ b/series.conf
@@ -10371,6 +10371,7 @@
 	patches.suse/dt-bindings-mediatek-mt8188-Add-binding-for-MM-INFRA-IOMMU
 	patches.suse/iommu-mediatek-Fix-two-IOMMU-share-pagetable-issue.patch
 	patches.suse/iommu-mediatek-Adjust-mtk_iommu_config-flow
+	patches.suse/iommu-mediatek-Add-enable-IOMMU-SMC-command-for-INFRA-masters
 	patches.suse/iommu-rockchip-Fix-directory-table-address-encoding.patch
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
