--- a/series.conf
+++ b/series.conf
@@ -9897,6 +9897,7 @@
 	patches.suse/vfio-Mark-cdev-usage-in-vfio_device
 	patches.suse/vfio-Add-helper-to-search-vfio_device-in-a-dev_set
 	patches.suse/vfio-pci-Extend-VFIO_DEVICE_GET_PCI_HOT_RESET_INFO-for-vfio-devi
+	patches.suse/vfio-pci-Copy-hot-reset-device-info-to-userspace-in-the-devices-
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
