--- a/series.conf
+++ b/series.conf
@@ -9965,6 +9965,7 @@
 	patches.suse/vfio-Do-not-allow-ops-dma_unmap-in-vfio_pin-unpin_pages
 	patches.suse/iommufd-Allow-passing-in-iopt_access_list_id-to-iopt_remove_acce
 	patches.suse/iommufd-Add-iommufd_access_change_ioas-_id-helpers
+	patches.suse/iommufd-Use-iommufd_access_change_ioas-in-iommufd_access_destroy
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
