--- a/series.conf
+++ b/series.conf
@@ -10374,6 +10374,7 @@
 	patches.suse/iommu-mediatek-Add-enable-IOMMU-SMC-command-for-INFRA-masters
 	patches.suse/iommu-mediatek-Add-MT8188-IOMMU-Support
 	patches.suse/iommu-mediatek-mt8188-Add-iova_region_larb_msk
+	patches.suse/MAINTAINERS-iommu-mediatek-Update-the-header-file-name
 	patches.suse/iommu-rockchip-Fix-directory-table-address-encoding.patch
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
