--- a/series.conf
+++ b/series.conf
@@ -9902,6 +9902,7 @@
 	patches.suse/vfio-Allocate-per-device-file-structure
 	patches.suse/vfio-Refine-vfio-file-kAPIs-for-KVM
 	patches.suse/vfio-Accept-vfio-device-file-in-the-KVM-facing-kAPI
+	patches.suse/kvm-vfio-Prepare-for-accepting-vfio-device-fd
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
