--- a/series.conf
+++ b/series.conf
@@ -9945,6 +9945,7 @@
 	patches.suse/vfio-pds-Send-type-for-SUSPEND_STATUS-command
 	patches.suse/iommufd-Move-isolated-msi-enforcement-to-iommufd_device_bind
 	patches.suse/iommufd-Add-iommufd_group
+	patches.suse/iommufd-Replace-the-hwpt-devices-list-with-iommufd_group
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
