--- a/series.conf
+++ b/series.conf
@@ -9937,6 +9937,7 @@
 	patches.suse/vfio-pds-Add-support-for-firmware-recovery
 	patches.suse/vfio-pds-Add-Kconfig-and-documentation
 	patches.suse/vfio-cdx-Remove-redundant-initialization-owner-in-vfio_cdx_drive
+	patches.suse/vfio-fsl-mc-Use-module_fsl_mc_driver-macro-to-simplify-the-code
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
