--- a/series.conf
+++ b/series.conf
@@ -9889,6 +9889,7 @@
 	patches.suse/PCI-keembay-Remove-cast-between-incompatible-functio.patch
 	patches.suse/PCI-microchip-Remove-cast-between-incompatible-funct.patch
 	patches.suse/PCI-DOE-Fix-destroy_work_on_stack-race.patch
+	patches.suse/vfio-pci-Update-comment-around-group_fd-get-in-vfio_pci_ioctl_pc
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
