--- a/series.conf
+++ b/series.conf
@@ -9952,6 +9952,7 @@
 	patches.suse/iommufd-Make-sw_msi_start-a-group-global
 	patches.suse/iommufd-Move-putting-a-hwpt-to-a-helper-function
 	patches.suse/iommufd-Add-enforced_cache_coherency-to-iommufd_hw_pagetable_all
+	patches.suse/iommufd-Allow-a-hwpt-to-be-aborted-after-allocation
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
