--- a/series.conf
+++ b/series.conf
@@ -10409,6 +10409,7 @@
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-amd-iommu_v2-Clear-pasid-state-in-free-path
 	patches.suse/iommu-amd-Generalize-log-overflow-handling
+	patches.suse/iommu-amd-Handle-PPR-log-overflow
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
