--- a/series.conf
+++ b/series.conf
@@ -9895,6 +9895,7 @@
 	patches.suse/iommufd-Add-iommufd_ctx_has_group
 	patches.suse/iommufd-Add-helper-to-retrieve-iommufd_ctx-and-devid
 	patches.suse/vfio-Mark-cdev-usage-in-vfio_device
+	patches.suse/vfio-Add-helper-to-search-vfio_device-in-a-dev_set
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
