--- a/series.conf
+++ b/series.conf
@@ -10391,6 +10391,7 @@
 	patches.suse/iommu-arm-smmu-qcom-Add-SM6375-SMMUv2
 	patches.suse/dt-bindings-iommu-qcom-iommu-Add-qcom-ctx-asid-property
 	patches.suse/dt-bindings-iommu-qcom-iommu-Add-QSMMUv2-and-MSM8976-compatibles
+	patches.suse/dt-bindings-arm-smmu-Fix-MSM8998-clocks-description
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
