--- a/series.conf
+++ b/series.conf
@@ -9974,6 +9974,7 @@
 	patches.suse/iommu-Move-dev_iommu_ops-to-private-header
 	patches.suse/iommu-Add-new-iommu-op-to-get-iommu-hardware-information
 	patches.suse/iommufd-Add-IOMMU_GET_HW_INFO
+	patches.suse/iommufd-selftest-Add-coverage-for-IOMMU_GET_HW_INFO-ioctl
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
