--- a/series.conf
+++ b/series.conf
@@ -9909,6 +9909,7 @@
 	patches.suse/vfio-Add-cdev_device_open_cnt-to-vfio_group
 	patches.suse/vfio-Make-vfio_df_open-single-open-for-device-cdev-path
 	patches.suse/vfio-iommufd-Move-noiommu-compat-validation-out-of-vfio_iommufd_
+	patches.suse/vfio-iommufd-Split-bind-attach-into-two-steps
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
