--- a/series.conf
+++ b/series.conf
@@ -9940,6 +9940,7 @@
 	patches.suse/vfio-fsl-mc-Use-module_fsl_mc_driver-macro-to-simplify-the-code
 	patches.suse/vfio-type1-fix-cap_migration-information-leak
 	patches.suse/vfio-align-capability-structures
+	patches.suse/pds_core-Fix-function-header-descriptions
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
