--- a/series.conf
+++ b/series.conf
@@ -9893,6 +9893,7 @@
 	patches.suse/vfio-pci-Move-the-existing-hot-reset-logic-to-be-a-helper
 	patches.suse/iommufd-Reserve-all-negative-IDs-in-the-iommufd-xarray
 	patches.suse/iommufd-Add-iommufd_ctx_has_group
+	patches.suse/iommufd-Add-helper-to-retrieve-iommufd_ctx-and-devid
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
