--- a/series.conf
+++ b/series.conf
@@ -9891,6 +9891,7 @@
 	patches.suse/PCI-DOE-Fix-destroy_work_on_stack-race.patch
 	patches.suse/vfio-pci-Update-comment-around-group_fd-get-in-vfio_pci_ioctl_pc
 	patches.suse/vfio-pci-Move-the-existing-hot-reset-logic-to-be-a-helper
+	patches.suse/iommufd-Reserve-all-negative-IDs-in-the-iommufd-xarray
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
