--- a/series.conf
+++ b/series.conf
@@ -9906,6 +9906,7 @@
 	patches.suse/kvm-vfio-Accept-vfio-device-file-from-userspace
 	patches.suse/vfio-Pass-struct-vfio_device_file-to-vfio_device_open-close
 	patches.suse/vfio-Block-device-access-via-device-fd-until-device-is-opened
+	patches.suse/vfio-Add-cdev_device_open_cnt-to-vfio_group
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
