--- a/series.conf
+++ b/series.conf
@@ -9942,6 +9942,7 @@
 	patches.suse/vfio-align-capability-structures
 	patches.suse/pds_core-Fix-function-header-descriptions
 	patches.suse/vfio-pds-fix-return-value-in-pds_vfio_get_lm_file
+	patches.suse/vfio-pds-Send-type-for-SUSPEND_STATUS-command
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
