--- a/series.conf
+++ b/series.conf
@@ -9951,6 +9951,7 @@
 	patches.suse/iommufd-Use-the-iommufd_group-to-avoid-duplicate-MSI-setup
 	patches.suse/iommufd-Make-sw_msi_start-a-group-global
 	patches.suse/iommufd-Move-putting-a-hwpt-to-a-helper-function
+	patches.suse/iommufd-Add-enforced_cache_coherency-to-iommufd_hw_pagetable_all
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
