--- a/series.conf
+++ b/series.conf
@@ -9920,6 +9920,7 @@
 	patches.suse/vfio-Test-kvm-pointer-in-_vfio_device_get_kvm_safe
 	patches.suse/iommufd-Add-iommufd_ctx_from_fd
 	patches.suse/vfio-Avoid-repeated-user-pointer-cast-in-vfio_device_fops_unl_io
+	patches.suse/vfio-Add-VFIO_DEVICE_BIND_IOMMUFD
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
