--- a/series.conf
+++ b/series.conf
@@ -10387,6 +10387,7 @@
 	patches.suse/iommu-qcom-Add-support-for-QSMMUv2-and-QSMMU-500-secured-context
 	patches.suse/iommu-arm-smmu-qcom-Sort-the-compatible-list-alphabetically
 	patches.suse/iommu-arm-smmu-qcom-Add-SM6375-DPU-compatible
+	patches.suse/iommu-arm-smmu-qcom-Add-SM6350-DPU-compatible
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
